fix logo-text aligning issue by adding new font format

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 @font-face {
-  font-family: "Norse Bold";
-  src: url("./fonts/Norse-Bold.otf");
+  font-family: "norsebold";
+  src: url("fonts/norse-bold-webfont.woff2") format("woff2"),
+    url("fonts/norse-bold-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 :root {
@@ -54,15 +57,20 @@ body {
   justify-content: center;
   align-items: center;
   color: white;
-  min-height: 130px;
   position: absolute;
   top: 20%;
+  padding: 16px;
+}
+
+.logo-image {
+  max-width: 80px;
+  max-height: 120px;
 }
 
 .logo-text {
-  font-family: "Norse Bold";
+  font-family: "norsebold", sans-serif;
   font-size: 5rem;
-  /* margin-top: 24px; */
+  align-self: center;
 }
 
 .text {
@@ -153,5 +161,6 @@ a {
   text-decoration: underline;
 }
 input:invalid {
+  outline: none;
   border-color: red;
 }
